[gd_scene load_steps=4 format=3 uid="uid://cmb10wy2q2gwf"]

[ext_resource type="Script" path="res://scripts/ui/menu/main_menu.gd" id="1_54ysk"]
[ext_resource type="Script" path="res://scripts/ui/menu/level_select/button_switch_scene.gd" id="2_i6yqm"]
[ext_resource type="PackedScene" uid="uid://bvughhmsw4fmq" path="res://scenes/ui/menu/settings_menu/settings_menu.tscn" id="3_pgtxk"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_54ysk")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="BattleButton" type="Button" parent="CenterContainer/Menu"]
layout_mode = 2
text = "Battle"
script = ExtResource("2_i6yqm")
scene_path = "res://tests/battle/test_battle.tscn"

[node name="StoryButton" type="Button" parent="CenterContainer/Menu"]
layout_mode = 2
text = "Story"
script = ExtResource("2_i6yqm")
scene_path = "res://scenes/ui/menu/level_select/menu_level_select.tscn"

[node name="SettingsButton" type="Button" parent="CenterContainer/Menu"]
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="CenterContainer/Menu"]
layout_mode = 2
text = "Exit"

[node name="SettingsMenu" parent="CenterContainer" instance=ExtResource("3_pgtxk")]
visible = false
layout_mode = 2

[connection signal="pressed" from="CenterContainer/Menu/BattleButton" to="CenterContainer/Menu/BattleButton" method="_on_pressed"]
[connection signal="pressed" from="CenterContainer/Menu/StoryButton" to="CenterContainer/Menu/StoryButton" method="_on_pressed"]
[connection signal="pressed" from="CenterContainer/Menu/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CenterContainer/Menu/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="menu_exited" from="CenterContainer/SettingsMenu" to="." method="_on_settings_menu_menu_exited"]
